# rag-ai-agent

./: .gitignore  README.md  STREAMLIT_SETUP.md  env.example  phase2a.py  phase2b_demo.py  pyproject.toml  pytest.ini  requirements.txt  run_streamlit.py  streamlit_app.py  validate_phase1.py
.streamlit/: config.toml
docs/: PHASE1_SUMMARY.md  PRD.md  PRODUCT_BRIEF.md  QUICKSTART.md  write_docs.md
docs/features/: 0001_PLAN.md  0001_REVIEW.md  0002_PLAN.md  0002_REVIEW.md  0003_PLAN.md  0003_REVIEW.md  0004_PLAN.md  0004_REVIEW.md  0005_PLAN.md
src/: __init__.py  chat.py  config.py  db.py  docling_chunker.py  docling_converter.py  embeddings.py  ingest.py  memory.py  models.py  query.py
src/ui/: __init__.py  auth.py  chat_interface.py  document_manager.py  file_upload.py
supabase/: config.toml
supabase/migrations/: 001_initial_schema.sql
tests/: __init__.py  conftest.py  test_chat.py  test_db.py  test_docling_chunker.py  test_docling_converter.py  test_embeddings.py  test_ingest.py  test_memory.py  test_query.py  test_streamlit_app.py
